:bug: :lipstick: Fix footer overflow html

--- a/src/components/Banner.scss
+++ b/src/components/Banner.scss
@@ -1,6 +1,8 @@
 #banner {
   height: 221px;
   margin-top: 64px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #left-banner {
