--- a/src/components/Footer2.scss
+++ b/src/components/Footer2.scss
@@ -6,7 +6,7 @@
   padding: 15px 0;
 
   &-wrapper {
-    padding: 0 30px;
+    margin: 0 30px;
   }
 
   .copyright {
