--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -1,4 +1,4 @@
-.navbar {
+.navbar-wrapper {
   height: 64px;
 }
 
@@ -22,7 +22,7 @@
     align-items: center;
   }
 
-  .navbar {
+  .navbar-wrapper {
     display: inline-block;
     width: 100%;
     height: 58px;
